--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+    background: #303030	;
 }
 
 .navbarbtn
@@ -14,9 +15,51 @@
 	margin: 10px;
 	text-align: center;
 	font: 1em "roboto", sans-serif;
-	height: 100px;
-  	line-height: 100px;
+	height: 50px;
+  	line-height: 50px;
   	cursor: pointer;
 	outline: none;
 }
 
+.home
+{
+    height: 0;
+    opacity: 0;
+}
+
+.list
+{
+    height: 0;
+    opacity: 0;
+}
+
+.search
+{
+    height: 0;
+    opacity: 0;
+}
+
+.user
+{
+    height: 0;
+    opacity: 0;
+}
+
+.shown
+{
+    height: calc(100vh - 75px);
+    opacity:100;
+}
+
+.form-control{
+    margin: 15px;
+    width: 500px;
+}
+
+.searchholder
+{
+    color: white;
+    font-size: 1.5rem;
+    width: calc(100vw - 305px);
+    display: inline-block;
+}
