--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -50,10 +50,10 @@
     width: 500px;
 }
 
-.searchholder
+p
 {
     color: white;
     font-size: 1.5rem;
-    width: calc(100vw - 305px);
-    display: inline-block;
+    width: calc(100vw - (400px));
+    margin: 0;
 }
